--- a/alura semana 1 e  2/Barbearia Alura/style-home.css
+++ b/alura semana 1 e  2/Barbearia Alura/style-home.css
@@ -1,36 +1,5 @@
-header {
-    background: #BBBBBB;
-    padding: 20px 0;
-}
-
-.caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-}
-
-nav {
-    position: absolute;
-    top: 110px;
-    right: 0px;
-}
-
-nav li {
-    display: inline;
-    margin: 0 0 0 15px;    
-}
-
-nav a {
-    text-transform: uppercase;
-    color: black;
-    font-weight: bolder;
-    font-size: 22px;
-    text-decoration: none;
-}
-
-nav a:hover {
-    color: #c78c19;
-    text-decoration: underline;
+body {
+  
 }
 
 #banner {
@@ -68,7 +37,7 @@ em strong {
 }
 
 
-.ul-beneficios {
+ul {
     display: inline-block;
     vertical-align: top;
     width: 20%;
